src/main/java/com/example/gerimedicaexam/error/ParsingException.java
package com.example.gerimedicaexam.error;

public class ParsingException extends Throwable {
    public ParsingException(String message) {
        super(message);
    }
}
